# Compilers-A12

./: A12.bat  BIG-A12-f-100-10.err  BIG-A12-f-100-10.out  BIG-A12.out  BIG.nl  CMakeLists.txt  Compilers.c  Compilers.h  HELLO-A12-m-100-10.out  HELLO-A12.out  MainReader.c  README.txt  Reader.c  Reader.h  SMALL-A12-a-100-10.out  SMALL.nl  launch.vs.json
